Added show action within ArticlesController.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,1 +1,11 @@
 <h1>This is the show functionality!</h1>
+
+<p><strong>Title: </strong>
+    <%= @article.title %>
+</p>
+<p><strong>Description: </strong>
+    <%= @article.description %>
+</p>
+<p><strong>Created at: </strong>
+    <%= @article.created_at.to_date %>
+</p>
