--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -29,3 +29,9 @@
                 <!-- doesnt come with an evaluation -->
     </tbody>
 </table>
+
+<br>
+<br>
+<br>
+
+<%= link_to "Add new article" , new_article_path ,{ style: "color: black;" }%>
