--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,18 +1,38 @@
 <h1>Add a new article.</h1>
+<% if @article.errors.any? %>
+    <h3>Error occured while creating your article. </h3>
+    <!-- <% @article.errors.full_messages.each do |err| %>
+        <ul>
+            <li>
+                <%= err %>
+            </li>
+        </ul>
+        <% end %> -->
+    <ul>
+        <li>
+            <%= @article.errors.full_messages[0] %>
+        </li>
+    </ul>
+<% end %>
+                <%= form_with scope: :article, url: articles_path, local: true do |f| %>
+                    <p>
+                        <%= f.label :title %>
+                            <br>
+                            <%= f.text_field :title %>
+                    </p>
+                    <br>
+                    <br>
+                    <p>
+                        <%= f.label :description %>
+                            <br>
+                            <%= f.text_area :description %>
+                    </p>
+                    <p>
+                        <%= f.submit %>
+                    </p>
+                    <% end %>
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-    <p>
-        <%= f.label :title %>
-            <br>
-            <%= f.text_field :title %>
-    </p>
+                        <br>
+                        <br>
 
-    <p>
-        <%= f.label :description %>
-            <br>
-            <%= f.text_area :description %>
-    </p>
-    <p>
-        <%= f.submit %>
-    </p>
-    <% end %>
+                        <%= link_to "Go back" , articles_path, {style:"color:black;"} %>
