--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,33 @@
 <h1>This is the show functionality!</h1>
 
-<p><strong>Title: </strong>
-    <%= @article.title %>
-</p>
-<p><strong>Description: </strong>
-    <%= @article.description %>
-</p>
-<p><strong>Created at: </strong>
-    <%= @article.created_at.to_date %>
-</p>
+<% flash.each do |key, value|%>
+    <br>
+    <br>
+    <ul>
+        <li>
+            <%= value %>
+        </li>
+    </ul>
+    <br>
+    <br>
+    <% end %>
+
+
+        <p><strong>Title: </strong>
+            <%= @article.title %>
+        </p>
+        <p><strong>Description: </strong>
+            <%= @article.description %>
+        </p>
+        <p><strong>Created at: </strong>
+            <%= @article.created_at.to_date %>
+        </p>
+        <% if @article.created_at != @article.updated_at%>
+            <p><strong>updated at: </strong>
+            <%= @article.updated_at %>
+        </p>
+        <%end%>
+        <br>
+        <br>
+
+        <%= link_to "Go back" , articles_path ,{ style: "color: black;" }%>
