--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -36,4 +36,4 @@
                         <br>
                         <br>
 
-                        <%= link_to "Go back" , articles_path, {style:"color:black;"} %>
+                       <%= button_to "Go back", articles_path, method: :get %>
