--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
 <h1>This is the home page</h1>
+<h2>
+    <%= link_to "Go To Articles", articles_path, {style: "color: black"} %>
+</h2>
+<h2>
+    <%= link_to "About Us", about_path, {style: "color: black"} %>
+</h2>
