--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -30,4 +30,12 @@
         <br>
         <br>
 
-        <%= link_to "Go back" , articles_path ,{ style: "color: black;" } %>
+        <!-- <%= button_to "Delete", @article, method: :delete %> -->
+        <!-- both will work the same way. -->
+        
+        <div style="display: flex;">
+            <%= button_to "Delete", article_path, method: :delete %>
+            <%= button_to "Edit", edit_article_path(@article), method: :get %>
+            <%= button_to "Go back", articles_path, method: :get %>
+        </div>
+        
