--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,9 @@
 <h1>Welcome to the about page</h1>
+
+<h2>
+    <%= link_to "Go To Articles", articles_path, {style: "color: black"} %>
+</h2>
+
+<h2>
+    <%= link_to "Go To Home Page", root_path, {style: "color: black"} %>
+</h2>
