--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -50,6 +50,6 @@
 
 <%= button_to "Add" , new_article_path, method: :get %>
 <h3>
-    <%= link_to "Go To Home Page", root_path, { style: "color:black" } %>
+    <%= link_to "Go To Home Page", root_path, { style: "color:black; text-decoration: none;" } %>
 </h3>
 <!-- <%= button_to "Add new article" , new_article_path ,{ style: "color: black;" }%> -->
