--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,17 @@
-<h1>This is the home page</h1>
-<h2>
-    <%= link_to "Go To Articles", articles_path, {style: "color: black; text-decoration: none;"} %>
+<!-- <h2>
+    <%= link_to "Articles", articles_path %>
 </h2>
 <h2>
-    <%= link_to "About Us", about_path, {style: "color: black; text-decoration: none;"} %>
-</h2>
+    <%= link_to "About Us" , about_path %>
+</h2> -->
+<div>
+    <div class="container" id="home_container">
+        <div class="jumbotron" id="home_jumbotron">
+            <h1 class="display-4">MyBlog</h1>
+            <p class="lead">Welcome to My Blog. Your friend to manage your blogs online</p>
+            <hr class="my-4">
+            <p>We used Ruby on Rails to develop the backend and took help from bootstrap for the frontend.</p>
+            <a class="btn btn-primary btn-lg" href="#" id="sign-up-btn" role="button">Sign Up</a>
+        </div>
+    </div>
+</div>
