--- a/app/views/articles/_articleForm.html.erb
+++ b/app/views/articles/_articleForm.html.erb
@@ -1,8 +1,17 @@
 <% if @article.errors.any? %>
-    <h3 style="color : red;">Error occured while updating the form</h3>
-    <ul>
-        <li><%= @article.errors.full_messages[0] %></li>
-    </ul>
+    <!-- <h3 style="color : red;">Aricle was not saved.</h3>
+    <p><%= @article.errors.full_messages[0] %></p> -->
+    <div class="container" style="margin-top: 3%;">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <h4 class="alert-heading">Aricle was not saved.</h4>
+            <ul>
+                <li><%= @article.errors.full_messages[0] %></li>
+            </ul>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
 <%end%>
 
 <!-- Form begins here -->
@@ -11,7 +20,7 @@
 the form to submit using a standard HTML request (page reload) rather than an AJAX (remote) request. 
 forms in rails use Ajax by default to prevent it from using it we toggle the local so that the form gets submitted
 via simple HTML request -->
-<div class="container" style="margin-top: 3%;">
+<div class="container shadow p-3 mb-5 bg-white rounded" style="margin-top: 3%;">
     <div class="card">
         <div class="card-header text-center">
             <%= @text %> your blog
