--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Add a new article.</h1>
+<!-- <h1>Add a new article.</h1> -->
 
 <!-- this is how to add partials in the layouts folder you will have to provide the whole path but here its not necessarry. -->
  
