--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,15 +3,22 @@
 <h1 style="text-decoration: underline; text-align: center; margin: 20px;">Your blog</h1>
 
 <% flash.each do |key, value|%>
-    <br>
-    <br>
-    <ul>
+    <!-- <ul>
         <li>
             <%= value %>
         </li>
-    </ul>
-    <br>
-    <br>
+    </ul> -->
+    <div class="container" style="margin-top: 3%;">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <h4 class="alert-heading">Success</h4>
+            <ul>
+                <li><%= value %></li>
+            </ul>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
 <% end %>
 <!-- <p><strong>Title: </strong>
     <%= @article.title %>
