--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -56,15 +56,15 @@
 <% @articles.each do |article| %>
     <div class="container shadow p-3 mb-5 bg-light rounded" style="margin-top: 20px;">
         <div class="card">
-            <div class="card-header">
-                <%= article.id %>
+             <div class="card-header text-muted text-center">
+                <p class="mb-0 font-italic">By: <span class="font-italic"><%= article.user.username if article.user %></span></p>
             </div>
             <div class="card-body">
                 <h5 class="card-title"><%= link_to article.title, article_path(article), style:"color:rgb(24, 175, 24);" %></h5>
                 <p class="card-text"><%= truncate(article.description, length: 140) %></p>
 
                 <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-                    <div style="display: flex; flex-wrap: wrap; justify-content: space-between; width:13%;">
+                    <div style="display: flex; flex-wrap: wrap; justify-content: space-between; width:10%;">
                         <%= button_to "Show", article_path(article), method: :get, class: "article_card_btn", id: "show_btn" %> 
                         <%= button_to "Edit", edit_article_path(article), method: :get, class: "article_card_btn", id: "edit_btn" %>    
                     </div>
