--- a/app/views/articles/_articleForm.html.erb
+++ b/app/views/articles/_articleForm.html.erb
@@ -1,19 +1,4 @@
-<% if @article.errors.any? %>
-    <!-- <h3 style="color : red;">Aricle was not saved.</h3>
-    <p><%= @article.errors.full_messages[0] %></p> -->
-    <div class="container" style="margin-top: 3%;">
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <h4 class="alert-heading">Aricle was not saved.</h4>
-            <ul>
-                <li><%= @article.errors.full_messages[0] %></li>
-            </ul>
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-    </div>
-<%end%>
-
+<%= render "shared/errors", obj: @article %>
 <!-- Form begins here -->
 
 <!-- In Rails, local: true in a form_with helper forces 
@@ -41,8 +26,8 @@ via simple HTML request -->
                <%= form.submit class: "article_card_btn", id: "edit_btn"%>
             </div>
         <% end %>
-        <div style="text-align: center; margin: 0.3%;">
-           <%= button_to "Go back", articles_path, method: :get, class: "article_card_btn", id: "show_btn" %>
+        <div style="text-align: center; margin-top: 2%;">
+            <%= link_to "[ Go back ]", articles_path(@article.id), method: :get, class:"go-back-home" %>
         </div>
         
         </div>
