--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,14 +4,31 @@
 <h2>
     <%= link_to "About Us" , about_path %>
 </h2> -->
+<% flash.each do |key, value| %>
+    <!-- <ul>
+        <li><%= value %></li>
+    </ul> -->
+    <div class="container" style="margin-top: 0.2%;">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <h4 class="alert-heading">Success!</h4>
+            <ul>
+                <li><%= value %></li>
+            </ul>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
+<%end%>
 <div>
-    <div class="container" id="home_container">
-        <div class="jumbotron" id="home_jumbotron">
+    <div class="container text-center" id="home_container">
+        <div class="jumbotron col-8 mx-auto" id="home_jumbotron">
             <h1 class="display-4">MyBlog</h1>
             <p class="lead">Welcome to My Blog. Your friend to manage your blogs online</p>
             <hr class="my-4">
             <p>We used Ruby on Rails to develop the backend and took help from bootstrap for the frontend.</p>
-            <a class="btn btn-primary btn-lg" href="#" id="sign-up-btn" role="button">Sign Up</a>
+            <!-- <a class="btn btn-primary btn-lg" href="/signup" id="sign-up-btn" role="button">Sign Up</a> -->
+            <%= link_to "Sign up!", signup_path, id: "sign-up-btn", class: "btn btn-primary btn-lg", role: "button" %>
         </div>
     </div>
 </div>
