edited the navbar

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <h1 style="text-decoration: underline; text-align: center; margin: 20px;">Articles</h1>
 
-<h5 style="text-align: center;"><%= button_to "Add new" , new_article_path, method: :get, class: "article_card_btn", id: "add_btn" %></h5>
+<!-- <h5 style="text-align: center;"><%= button_to "Add new" , new_article_path, method: :get, class: "article_card_btn", id: "add_btn" %></h5> -->
 
 <% flash.each do |key, value| %>
     <!-- <ul>
