--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
         <!-- <p>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</p> -->
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <%= link_to "User", users_path, {class: "nav-link"} %>
+                <%= link_to "Bloggers", users_path, {class: "nav-link"} %>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
