--- a/app/views/users/_userForm.html.erb
+++ b/app/views/users/_userForm.html.erb
@@ -4,11 +4,11 @@
 <div class="container shadow p-3 mb-5 bg-white col-5  rounded" style="margin-top: 3%;">
     <div class="card">
         <div class="card-header text-center">
-            Sign up for MyBlog
+            <%= @text %>
         </div>
         <div class="card-body" style="text-align: justify;">
-
-            <%= form_with(model: @user, local: true, url: "/signup") do |form| %>
+            <!-- -->
+            <%= form_with(model: @user, url: @user.new_record? ? signup_path : nil ,local: true) do |form| %>
                 <div class="form-group row" style="display: flex; flex-wrap: wrap; justify-content: space-around; width: 80%; margin-left: 9%;">
                     <%= form.label :Username, class: "col-5 col-form-label" %>
                     <%= form.text_field :username, class: "col-6 form-control", placeholder: "Username" %>
@@ -25,7 +25,7 @@
                     </div>
                 <%end%>
                 <div style="text-align: center; margin: 0.3%;">
-                    <%= form.submit(@user.new_record? ? "Sign up" : "Update user" , class: "card_btn", method: :post, id: "signup_btn" ) %>
+                    <%= form.submit(@user.new_record? ? "Sign up" : "Update user" , class: "card_btn", id: "signup_btn" ) %>
                 </div>
                 <div style="text-align: center; margin-top: 2%;">
                     <%= link_to "[ Go back ]", root_path, method: :get, class:"go-back-home" %>
