--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,16 @@
+<% flash.each do |key, value|%>
+    <div class="container" style="margin-top: 0.2%;">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <h4 class="alert-heading">Success</h4>
+            <ul>
+                <li><%= value %></li>
+            </ul>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    </div>
+<% end %>
 
 <div class="main-content">
   <div class="container mt-7">
@@ -77,8 +90,6 @@
   function showAndHide(){
     const toggle = document.getElementById("toggle")
     const content = document.getElementById("content")
-    content = document.get
-
     console.log(content);
     if(content.style.display === "block"){
       content.style.display = "none"
