--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,9 @@
           <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
               <div class="d-flex justify-content-between">
                 <a href="" class="go-back-home">@<%= @user.username %>'s profile</a>
-                <%= link_to "Edit your profile", edit_user_path(@user), class: "go-back-home" %>
+                <% if @user == current_user %>
+                  <%= link_to "Edit your profile", edit_user_path(@user), class: "go-back-home" %>
+                <%end%>
                 <!-- <a href="edit" class="go-back-home">Edit your profile</a> -->
               </div>
           </div>
@@ -68,10 +70,13 @@
                 <hr class="my-4" style="background-color: #919191;">
               
                 <div class="more-content text-left" id="content" style="display: none;">
-                    <% @user.articles.each do |article| %>
+                    <% @articles.each do |article| %>
                       <a class="go-back-home"  href="#"><%= link_to "#{article.title}", article_path(article), class: "go-back-home" %></a>
                       <hr style="background-color: #919191;">
                     <% end %>
+                    <div class="flickr_pagination">
+                      <%= will_paginate @articles, previous_label: "Previous", next_label: "Next", :container => true %>
+                    </div>
                 </div>
 
                 <!-- image add karni hai or show page proper ready karna hai  -->
